-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.1.1
-
None
-
3
-
7796
(mdc_locks.c:597:mdc_finish_enqueue()) ASSERTION(client_is_remote(exp)) failed
A client hit the above assertion with the following backtrace
machine_kexec
crash_kexec
panic
lbug_with_loc
libcfs_assertion_failed
mdc_finish_enqueue
mdc_enqueue
mdc_intent_lock
ll_revalidate_it
ll_revalidate_nd
do_lookup_at
__link_path_walk
path_walk
do_path_lookup
do_filp_open
do_sys_open
sys_open
system_call_fastpath
LLNL-bugzilla-ID: 1711